crates/karva/tests/it/extensions/tags/snapshots/it__extensions__tags__timeout__hard_timeout_preserves_history_when_retry_crashes.snap
---
source: crates/karva/tests/it/extensions/tags/timeout.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--retry=1"
    - "--result-output=results.json"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791047650
---
success: false
exit_code: 1
----- stdout -----
    Starting 1 test across 1 worker
  TRY 1 FAIL [TIME] test::test_timeout
       CRASH [TIME] test::test_timeout

failures:

test::test_timeout:

error[worker-crashed]: Worker terminated with exit code 17 while running `test::test_timeout`

captured stdout:
first attempt timed out

────────────
     Summary [TIME] 1 test run: 0 passed, 1 error, 0 skipped

----- stderr -----
ERROR Worker 1 failed with exit code 17 in [TIME]
